--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "http://localhost/"
 languageCode = "en-us"
 title = "Nick Feller"
 theme = "academic"
+canonifyurls = true
 
 [params]
   name = "Nick Feller"
