--- a/config.toml
+++ b/config.toml
@@ -1,95 +1,61 @@
-baseurl = "http://localhost/"
+baseurl = "http://replace-this-with-your-website-url.com/"
+title = "Nick!"
+copyright = "&copy; 2016 Nicolas Feller"
 languageCode = "en-us"
-title = "Nick Feller"
 theme = "academic"
-canonifyurls = true
+
+# Enable comments by entering your Disqus shortname
+disqusShortname = "spf13"
+
+# Enable analytics by entering your Google Analytics tracking ID
+googleAnalytics = ""
+
 
 [params]
-  name = "Nick Feller"
-  role = "Artificial Intelligence Research At Concordia University And Software Engineer at Ericsson"
-  avatar = "nick.jpg"
+  name = "Nicolas R. Feller"
+  role = "SWE - RA - Gopher"
+  organization = "Montreal, QC"
+  avatar = "me.png"
   email = "me@nicolasfeller.com"
-  address = "3959 rue Clark, Montreal, Quebec, Canada - H2W 1W8"
-  phone = "(514) 984-6425"
+  address = "3959 rue Clark, Montreal, H2W 1W8"
+  phone = "+1(514)984-6425"
+
+  # Enable Keybase in Contact section by entering your keybase.io username.
+  keybase = ""
 
   # Date format (refer to Go's date format: http://flippinggodateformat.com )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
   date_format = "Mon, Jan 2, 2006"
 
-  # Enable global LaTeX math rendering? If false, you can enable it locally on a per page basis.
+  # Enable global LaTeX math rendering?
+  #   If false, you can enable it locally on a per page basis.
   math = false
 
   # Enable native social sharing buttons?
   sharing = true
 
-  # Link custom CSS and JS assets (relative to /static/css and /static/js respectively)
+  # Link custom CSS and JS assets
+  #   (relative to /static/css and /static/js respectively)
   custom_css = []
   custom_js  = []
 
-  # Biography section.
-  # Section will only be displayed if `content/home/about.md` exists.
-  [params.about]
-    interests = ["Artificial Intelligence", "Software Development", "Philosophy", "Hicking - Camping", "Litterature"]
-    str_interests = "Interests"
-    str_education = "Education"
-
-    [[params.about.education]]
-      course = "B.Eng Computer Engineering"
-      institution = "Concordia University"
-      year = 2017
-
-    [[params.about.education]]
-      course = "B.Comm Finance"
-      institution = "John Molson School of Business"
-      year = 2012
-
-  # Selected Publications section.
-  # Section will only be displayed if there are publications with `selected = true` in their `+++` preamble.
-  [params.publications_selected]
-    detailed_list = true
-    title = "Selected Publications"
-    subtitle = ""
-
-  # Publications section.
-  # Section will only be displayed if there are publications in `content/publication/`.
-  [params.publications]
-    count = 10
-    detailed_list = false
-    title = "Recent Publications"
-    subtitle = ""
-    str_all = "More Publications"
-
-  # Posts section.
-  # Section will only be displayed if there are posts in `content/post/`.
-  [params.posts]
-    count = 5
-    title = "Recent Posts"
-    subtitle = ""
-    str_all = "More Posts"
-    str_read_more = "Read more"
-
-  # Projects section.
-  # Section will only be displayed if there are projects in `content/project/`.
-  [params.projects]
-    title = "Projects"
-    subtitle = ""
-
-  # Contact section.
-  [params.contact]
-    enable = true
-    title = "Contact"
-    subtitle = ""
-    autolink = true  # Automatically link email and phone?
 
   # Social/Academic Networking
   #
   # Icon pack "fa" includes the following social network icons:
-  #   twitter, weibo, linkedin, github, facebook, pinterest, google-plus, youtube, instagram, soundcloud
-  #   For email icon, use "fa" icon pack, "envelope" icon, and "mailto:your@email.com" as the link.
+  #
+  #   twitter, weibo, linkedin, github, facebook, pinterest, google-plus,
+  #   youtube, instagram, soundcloud
+  #
+  #   For email icon, use "fa" icon pack, "envelope" icon, and
+  #   "mailto:your@email.com" as the link.
+  #
   #   Full list: https://fortawesome.github.io/Font-Awesome/icons/
   #
   # Icon pack "ai" includes the following academic network icons:
+  #
   #   google-scholar, arxiv, orcid, researchgate, mendeley
+  #
   #   Full list: https://jpswalsh.github.io/academicons/
 
   [[params.social]]
@@ -98,24 +64,25 @@ canonifyurls = true
     link = "mailto:me@nicolasfeller.com"
 
   [[params.social]]
-    icon = "twitter"
+    icon = "linkedin-square"
     icon_pack = "fa"
-    link = "//twitter.com/NickyFellz"
-
-  [[params.social]]
-    icon = "facebook"
-    icon_pack = "fa"
-    link = "https://www.facebook.com/nicky.feller"
+    link = "https://ca.linkedin.com/in/nicolasfeller"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "https://github.com/nrkfeller"
+    link = "//github.com/nrkfeller"
+
+    [[params.social]]
+    icon = "twitter"
+    icon_pack = "fa"
+    link = "https://twitter.com/NickyFellz"
 
   [[params.social]]
-    icon = "linkedin"
+    icon = "book"
     icon_pack = "fa"
-    link = "https://ca.linkedin.com/in/nicolasfeller"
+    link = "https://www.quora.com/profile/Nick-R-Feller"
+
 
 # Navigation Links
 #   The weight parameter defines the order that the links will appear in.
@@ -125,18 +92,28 @@ canonifyurls = true
   url = "#top"
   weight = 1
 
+
 [[menu.main]]
-  name = "Work Experience"
-  url = "#experience"
+  name = "Posts"
+  url = "#posts"
   weight = 2
 
 [[menu.main]]
-  name = "Booklist"
-  url = "#booklist"
-  weight = 3
-
+name = "Publications"
+url = "#publications"
+weight = 3
 
 [[menu.main]]
   name = "Projects"
   url = "#projects"
   weight = 4
+
+[[menu.main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 7
+
+[[menu.main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 6
